# Varcon

./: .clang-format  .gitignore  CMakeLists.txt  compile.bat  toggleVulkanLogs.sh  vkinfo_loader_debug.txt  vulkaninfo.txt
TEST/: ana.c  assessment.c  e.c  main.c  pointers.c  problem.c
headers/: debug.hpp  device.hpp  first_app.hpp  pipeline.hpp  window.hpp
shaders/: shader.vert
src/: debug.cpp  device.cpp  first_app.cpp  main.cpp  pipeline.cpp  window.cpp
